# sktime-dl

./: .azure-pipelines.yml  .travis.yml  Dockerfile  MANIFEST.in  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  README.rst  azure-pipelines.yml  setup.cfg  setup.py
.azure-pipelines/: ci.yml  cron.yml  reproducibility.yml
.binder/: requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-and-test.yml  build-test.yml
build_tools/: build.sh  requirements.txt  test.sh
build_tools/azure/: build.sh  build_and_test.yml  publish.yml  test.sh
examples/: multivariate_time_series_classification.ipynb  time_series_classification.ipynb  univariate_time_series_classification.ipynb  univariate_time_series_regression_and_forecasting.ipynb
maint_tools/: linting.sh  make_release.py
sktime_dl/: .coveragerc  Dockerfile  __init__.py
sktime_dl/classification/: __init__.py  _classifier.py  _cnn.py  _cntc.py  _encoder.py  _fcn.py  _inceptiontime.py  _lstmfcn.py  _macnn.py  _mcdcnn.py  _mcnn.py  _mlp.py  _oscnn.py  _resnet.py  _tapnet.py  _tlenet.py  _twiesn.py
sktime_dl/deeplearning/: __init__.py  _fcn.py  _mcdcnn.py
sktime_dl/experimental/: classifier_experiments.py  reduction_examples.py  regression_experiments.py  reproductions.py
sktime_dl/meta/: __init__.py  _dlensemble.py  _dltuner.py
sktime_dl/networks/: __init__.py  _cnn.py  _cntc.py  _encoder.py  _fcn.py  _inceptiontime.py  _lstm.py  _lstmfcn.py  _macnn.py  _mcdcnn.py  _mlp.py  _oscnn.py  _resnet.py  _tapnet.py  _tlenet.py
(+128 files in other folders)
