[aliases]
test = pytest

[tool:pytest]
# ignore certain folders and pytest warnings
addopts =
    --ignore build_tools
    --ignore maint_tools
    --ignore examples
#    --disable-pytest-warnings

filterwarnings =
    # Warnings that we raise:
    ignore::UserWarning

[flake8]
# Default flake8 3.5 ignored flags
ignore=E121,E123,E126,E226,E24,E704,W503,W504
exclude=sktime_dl/experimental/*

[metadata]
description-file = README.md

[bdist_wheel]
universal=1